fixing color contrasts and a bit more css

--- a/docs/css/brand.css
+++ b/docs/css/brand.css
@@ -10,6 +10,7 @@ article {
 }
 
 main {
+    color: #4604D2;
     margin: 0;
     background-color: #FDEA85;
 }
